Tue Sep 30 14:57:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/pub_multicast_async.ini:
        * tests/DCPS/ManyToMany/pub_multicast_async.ini:
        * tests/DCPS/ManyToMany/udp.ini:
        * tests/DCPS/PersistentInfoRepo/pub_multicast_async.ini:

          Adjust buffer sizes, nak depths.

Mon Sep 29 18:21:52 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Compiler/idl_test1_main/main.cpp:
        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:
        * tests/DCPS/PersistentDurability/publisher.cpp:

          Catch exceptions.

Mon Sep 29 17:32:34 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Reconnect/run_test.pl:

          Increased Debug level for function coverage.

Mon Sep 29 17:26:30 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/run_test.pl:

          Increased Debug level for function coverage.

Thu Sep 25 15:22:23 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/Writer.h:
        * tests/DCPS/LargeSample/Writer.cpp:
        * tests/DCPS/LargeSample/publisher.cpp:

          Send num messages based on command line param.
          For unreliable, reduce sleep to 100ms between sends.

        * tests/DCPS/LargeSample/subscriber.cpp:

          Expect  num messages based on command line param.

        * tests/DCPS/LargeSample/run_test.pl:

          Set -n commane line params for publisher and subscriber.

        * tests/DCPS/LargeSample/udp.ini:

          Increse buffer size. Default is only large enough to hold one message.

Mon Sep 22 19:59:33 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/UnitTests/ut_Reassembly.cpp:

          Comment out for now...

Mon Sep 22 14:43:48 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/UnitTests:
        * tests/DCPS/UnitTests/UnitTests.mpc: