@@ -15,6 +15,8 @@
 #include <dds/DCPS/PublisherImpl.h>
 #include <dds/DCPS/SubscriberImpl.h>
 #include <dds/DCPS/transport/framework/TransportRegistry.h>
+#include <dds/DCPS/transport/framework/TransportExceptions.h>
+
 #include <ace/streams.h>
 
 #include "ace/Get_Opt.h"
@@ -57,6 +59,8 @@ void set_rt()
 
 int ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 {
+  try {
+
        // Calling TheParticipantFactoryWithArgs before user application parse command
        // line.
        /* Create participant */
@@ -187,6 +191,14 @@ int ACE_TMAIN(int argc, ACE_TCHAR *argv[])
        dp->delete_contained_entities ();
        dpf->delete_participant (dp.in ());
        TheServiceParticipant->shutdown ();
+
+  } catch (const OpenDDS::DCPS::Transport::MiscProblem &) {
+    ACE_ERROR((LM_ERROR,
+      ACE_TEXT("(%P|%t) sample_pub() - ")
+      ACE_TEXT("Transport::MiscProblem exception caught during processing.\n")
+    ));
+    return 1;
+  }
 
        return(0);
 
